<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/standblue_bt"
    tools:context=".NewRecodr">

    <TextView
        android:id="@+id/kg_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/new_recorf"
        android:textColor="@color/custom_color"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cm_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/weight"
        android:textColor="@color/custom_color"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kg_tv" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/length"
        android:textColor="@color/custom_color"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cm_tv"
        app:layout_constraintStart_toStartOf="@+id/cm_tv"
        app:layout_constraintTop_toBottomOf="@+id/cm_tv" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/date"
        android:textColor="@color/custom_color"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/time"
        android:textColor="@color/custom_color"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/newRecord_kg_minus_bt"
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:layout_marginStart="70dp"
        android:background="@drawable/standblue_bt"
        android:fontFamily="sans-serif-black"
        android:text="-"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/custom_color"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cm_tv"
        app:layout_constraintStart_toEndOf="@+id/cm_tv"
        app:layout_constraintTop_toTopOf="@+id/cm_tv" />

    <TextView
        android:id="@+id/new_kg_tv"
        android:layout_width="70sp"
        android:layout_height="20sp"
        android:background="@drawable/standblue_bt"
        app:layout_constraintBottom_toBottomOf="@+id/cm_tv"
        app:layout_constraintStart_toEndOf="@+id/newRecord_kg_minus_bt"
        app:layout_constraintTop_toTopOf="@+id/cm_tv" />

    <TextView
        android:id="@+id/newRecord_kg_plus_bt"
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:background="@drawable/standblue_bt"
        android:text="+"
        android:textAlignment="center"
        android:textColor="@color/custom_color"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cm_tv"
        app:layout_constraintStart_toEndOf="@+id/new_kg_tv"
        app:layout_constraintTop_toTopOf="@+id/cm_tv" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/kg"
        android:textColor="@color/custom_color"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/newRecord_kg_plus_bt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/newRecord_kg_plus_bt"
        app:layout_constraintTop_toTopOf="@+id/newRecord_kg_plus_bt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/newRecord_cm_plus_bt"
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:background="@drawable/standblue_bt"
        android:text="+"
        android:textAlignment="center"
        android:textColor="@color/custom_color"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="@+id/newRecord_kg_plus_bt"
        app:layout_constraintStart_toEndOf="@+id/new_cm_tv"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

    <TextView
        android:id="@+id/new_cm_tv"
        android:layout_width="70sp"
        android:layout_height="20sp"
        android:background="@drawable/standblue_bt"
        android:textAlignment="center"
        android:textColor="@color/custom_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="@+id/new_kg_tv"
        app:layout_constraintStart_toStartOf="@+id/new_kg_tv"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

    <TextView
        android:id="@+id/newRecord_cm_minus_bt"
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:background="@drawable/standblue_bt"
        android:text="-"
        android:textAlignment="center"
        android:textColor="@color/custom_color"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="@+id/newRecord_kg_minus_bt"
        app:layout_constraintStart_toStartOf="@+id/newRecord_kg_minus_bt"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/cm"
        android:textAlignment="center"
        android:textColor="@color/custom_color"
        android:textSize="17sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="@+id/textView25"
        app:layout_constraintStart_toEndOf="@+id/newRecord_cm_plus_bt"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="110sp"
        android:layout_height="20sp"
        android:background="@drawable/standblue_bt"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@+id/textView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="@+id/textView15"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="110sp"
        android:layout_height="20sp"
        android:background="@drawable/standblue_bt"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="@+id/textView16"
        app:layout_constraintEnd_toEndOf="@+id/editTextDate"
        app:layout_constraintStart_toStartOf="@+id/editTextDate"
        app:layout_constraintTop_toTopOf="@+id/textView16" />

    <Button
        android:id="@+id/savedata2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginTop="50dp"
        android:background="@color/custom_color"
        android:fontFamily="sans-serif-black"
        android:text="@string/saveData"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime"
        app:layout_constraintVertical_bias="0.011" />
</androidx.constraintlayout.widget.ConstraintLayout>